# gfx

./: .gitignore  .gitmodules  Cargo.toml
canvas/src/: graph.ts
cpp/: CMakeLists.txt  Makefile  README.md  build_shaders.py
cpp-opengl/: CMakeLists.txt  main.cpp  tmp.cpp
cpp-opengl/src/: app.hpp  glapp.hpp  includes.hpp  model.hpp  shaders.cpp  shaders.hpp  window.hpp
cpp-vulkan/: .gitignore  CMakeLists.txt  README.md  build_shaders.py
cpp-vulkan/diagrams/: .gitignore  get_diagram.py  mermaid  mermaid.md
cpp-vulkan/docs/: INIT.md  INIT2.md
cpp-vulkan/docs/diagrams/: Makefile  diagram.md
cpp-vulkan/examples/: CMakeLists.txt  triangle.cpp
cpp-vulkan/include/: myutils.h
cpp-vulkan/src/: model.hpp  vulkanapp.cpp  vulkanapp.hpp
cpp/docs/: CPP.md  INIT.md
cpp/docs/diagrams/: Makefile  README.md  diagram.md  mermaid
cpp/examples/: triangle.cpp
cpp/include/: myutils.h  vulkanapp.h
cpp/playground/: CMakeLists.txt  main.cpp
cpp/src/: CMakeLists.txt  main.cpp  main.old.cpp  triangle.cpp  vulkanapp.cpp
js/: index.html
js/src/: pipeline.ts  shaders.ts
luma.gl/: .gitignore  index.js  package-lock.json  package.json  webpack.config.js
luma.gl/diagrams/: .gitignore  Makefile  mermaid.md
luma.gl/old/: index.js
luma.gl/src/: globals.js  index-low.js  index-mid.js  index.js  loop.js  mesh.js  utils.js
luma.gl/src/examples/: index-high.js  index-shaderhooks.js  index.js
math/: .gitignore  package.json  tsconfig.json  webpack.config.js
math/canvas/: .gitignore  tsconfig.json
math/canvas/src/: globals.ts  trig.ts
math/diagrams/: Makefile
math/luma.gl/: package.json  tsconfig.json
math/luma.gl/src/: globals.ts  main.ts
math/src/: axis.ts  globals.ts  graph.ts  lines.ts  main.ts
math/webgl2/: README.md  package.json  tmp.ts
math/webgl2/docs/: INIT.md
math/webgl2/fundamentals/: fun.js
math/webgl2/fundamentals/resources/: ui.js
math/webgl2/src/: buffer.ts  main.ts  model.ts  pipeline.ts  types.ts
rust/: Cargo.toml
rust-gfx/: .gitignore  Cargo.toml
rust-gfx/src/: main.rs
rust-vulkan/: Cargo.toml
rust-vulkan/src/: main.rs  vkapp.rs  window.rs
rust/docs/: BUFFERS.md
rust/src/: main.rs  rusticvk.rs
src/: lib.rs  main.rs  rusticvk.rs
webgl2/: .gitignore  Makefile  README.md  package.json  tsconfig.json  webpack.config.js
webgl2/diagrams/: Makefile  mermaid.md
webgl2/docs/: INIT.md
webgl2/fundamentals/resources/: m3.js  utils.js
webgl2/src/: axis.ts  globals.ts  main.ts  model.ts  pipeline.ts  rect.ts  triangle.ts  types.ts
webgl2/src/lib/: globals.ts  model.ts  types.ts
